--- a/package.json
+++ b/package.json
@@ -9,13 +9,9 @@
   "dependencies": {
     "preact": "^10.2.1"
   },
-  "config": {
-    "webpack_input": "./src/client.js",
-    "webpack_output": "./dist"
-  },
   "scripts": {
-    "webpack:watch": "webpack --watch --mode=development",
-    "webpack:build": "webpack --mode=production",
+    "webpack:watch": "webpack --mode=development --config=./config/webpack.js --watch",
+    "webpack:build": "webpack --mode=production --config=./config/webpack.js",
     "watch": "yarn webpack:watch",
     "build": "node scripts/static-ssr.js && yarn webpack:build"
   },
@@ -24,32 +20,31 @@
     "@babel/plugin-transform-react-jsx": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "@babel/register": "^7.8.3",
+    "autoprefixer": "^9.7.6",
     "babel-loader": "^8.0.6",
     "babel-plugin-module-resolver": "^4.0.0",
+    "css-loader": "^3.5.1",
+    "cssnano": "^4.1.10",
+    "disable-output-webpack-plugin": "https://github.com/mrac/disable-output-webpack-plugin.git#0a9aeb09d2b8e16894bdcbf3b75cace6ca6d99d3",
+    "file-loader": "^6.0.0",
+    "ignore-loader": "^0.1.2",
+    "ignore-styles": "^5.0.1",
+    "less": "^3.11.1",
+    "less-loader": "^5.0.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.13.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.7.0",
     "preact-render-to-string": "^5.1.4",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.3",
+    "svg-url-loader": "^5.0.0",
+    "url-loader": "^4.0.0",
     "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "webpack-fix-style-only-entries": "^0.4.0"
   },
-  "babel": {
-    "presets": [
-      [
-        "@babel/preset-env"
-      ]
-    ],
-    "plugins": [
-      [ "@babel/plugin-transform-react-jsx", {
-          "pragma": "h",
-          "pragmaFrag": "Fragment"
-        }
-      ],
-      [ "module-resolver", {
-          "alias": {
-            "@": "./src",
-            "@pages": "./src/pages",
-            "@components": "./src/components"
-          }
-        }
-      ]
-    ]
+  "babel" : {
+      "extends" : "./config/babel.js"
   }
 }
